--- a/client/src/pages/Settings.css
+++ b/client/src/pages/Settings.css
@@ -7,7 +7,7 @@
 
 .settings {
   padding: 1rem;
-  padding-bottom: 6rem;
+  padding-bottom: 8rem;
   max-width: 600px;
   margin: 0 auto;
   width: 100%;
